# hg-c-benchmarks

./: .gitignore  .travis.yml  2d-convolution.input  2d-convolution.txt  CMakeLists.txt  README.md  example.txt  kernel.txt  laplace.txt  minimage.txt  nbody.res  pgo.sh  test.txt
src/: 2d-convolution.c  CMakeLists.txt  convolution-util.c  convolution-util.h  nbody.c  util.c  util.h
src/convolution/: convolution-run.c  convolution-run.h  convolution-util.c  convolution-util.h
src/nbody/: nbody-run.c  nbody-run.h  nbody-util.c  nbody-util.h
src/util/: util.c  util.h
test/: CMakeLists.txt  allConvolutionTests.cpp  allNbodyTests.cpp  allTests.cpp  convolutionTests.cpp  convolutionUtilTests.cpp  nbodyTests.cpp  nbodyUtilTests.cpp  utilTests.cpp
